# myshell

./: .gitignore  111.txt  2  2.txt  5.txt  CMakeLists.txt  Makefile  a.cpp  b.cpp  execute.c  execute.cpp  execute.h  gg.txt  myshell  myshell.c  myshell.cpp  myshell64  parser.c  parser.cpp  parser.h  sig.c  sig.h  util.c  util.h  viewtree.c  viewtree.h
cmake/Modules/: Findreadline.cmake
co-version/: myshell.c
include/: parser.h
myshell_ji/: execute.h  haha  newpipe.c  parser.c  parser.h
origin/: zhihan.c
origin/shuji/: execute.c  gg  internalcmd.c  internalcmd.h  newpipe.c
src/: CMakeLists.txt  execute.c  myshell.c  myshell.cpp  parser.c  parser.cpp
src/.deps/: myshell.Po
test/: .~lock.Test Cases.docx#  Makefile  Test Cases.docx  cases.txt  forever  forever.cpp  gg.txt  gg2.txt  inproc  loopf  myshell32  nested  oracle  outproc
